17920
```scala
cala> new Any
<console>:30: error: class Any is abstract; cannot be instantiated
              new Any
              ^

scala> new Any{}
<console>:30: error: Any does not have a constructor
              new Any{}
                  ^

scala> new AnyVal
<console>:30: error: class AnyVal is abstract; cannot be instantiated
              new AnyVal
              ^

scala> new AnyVal{}
<console>:30: error: value class may not be a local class
              new AnyVal{}
                  ^
```
